<resources>
    <string name="app_name" translatable="false">View Binding Template</string>
    <string name="yes">Yes</string>
    <string name="session_expired">Session Expired</string>
    <string name="please_login_again">Please login again</string>
    <string name="ok">OK</string>
    <string name="are_you_sure_want_to_exit">Are you sure, You want to exit?</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="email">Email</string>
    <string name="are_you_are_you_want_to_logout_from_this_app">Are you are you want to logout from this app ?</string>
    <string name="no">No</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid email address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_validation_message">*Password length must be greater then 8 character and contain at least one capital character, one small character, one alphanumeric and one special character.</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_and_confirm_password_dosent_match">Password and Confirm Password doesn\'t match</string>
    <string name="are_you_are_you_want_to_exit_from_this_app">Are you sure, you want to exit from this app ?</string>
    <string name="exit">Exit</string>
    <string name="login_first">Login First</string>
    <string name="cancel">Cancel</string>
    <string name="to_access_this_feature_you_have_to_login_first">To access this feature you have to login first</string>
    <string name="dial_call">Dial Call</string>
    <string name="camera_permission_required">Camera permission required</string>
    <string name="notification_permission_required">Notification permission required</string>

</resources>