<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:paddingHorizontal="@dimen/_15sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_round_corner_8dp"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stolzl_regular"
            android:lineSpacingExtra="4sp"
            android:text="@string/exit"
            android:textColor="@color/_28282B"
            android:textSize="28sp"
            android:textStyle="normal"
            tools:text="Exit" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/stolzl_regular"
            android:lineSpacingExtra="4sp"
            android:text="@string/are_you_are_you_want_to_exit_from_this_app"
            android:textColor="@color/_28282B"
            android:textSize="16sp"
            android:textStyle="normal"
            tools:text="Are you sure, you want to exit from this app ?" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/ic_round_corner_8dp"
                android:text="@string/yes"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btNo"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/no"
                android:textAllCaps="false" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </LinearLayout>

</LinearLayout>
