<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_round_white"
    android:padding="@dimen/_15sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logoutMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/stolzl_regular"
        android:lineSpacingExtra="4sp"
        android:text="@string/are_you_are_you_want_to_logout_from_this_app"
        android:textColor="@color/_28282B"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Are you are you want to logout from this app ?" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogoutYes"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/yes"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/logoutMessage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogoutNo"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/no"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btLogoutYes" />

</androidx.constraintlayout.widget.ConstraintLayout>